# Advent-of-Code-2017

2017/: Day-1-Part-2.hs  Day-10-Part-2.hs  Day-11-Part-1.hs  Day-12-Part-1.hs  Day-12-Part-2.hs  Day-13-Part-1.hs  Day-13-Part-2.hs  Day-16-Part-1.hs  Day-2-Part-1.hs  Day-2-Part-2.hs  Day-3-Part-1.hs  Day-4-Part-1.hs  Day-4-Part-2.hs  Day-9-Part-1.hs  Day-9-Part-2.hs
2018/: .gitignore  Day-1-Part-1.hs  Day1.hs  Day2.hs  Main.hs  Makefile  Template.hs  out.txt  package.yaml  stack.yaml
2018/src/: Day1.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day7.hs
2020/: .flake8  .gitignore  mypy.ini  pyproject.toml  solve
2020/src/aoc2020/_template/: solution.py
2020/src/aoc2020/common/: input.py
2020/src/aoc2020/day1/: solution.py
2020/src/aoc2020/day2/: solution.py
solutions/: Day-1-Part-1.hs  Day-10-Part-1.hs  Day-11-Part-2.hs  Day-2-Part-1.hs  Day-2-Part-2.hs  Day-5-Part-1.hs  Day-5-Part-2.hs  Day-6-Part-1.hs  Day-6-Part-2.hs  Day-8-Part-1.hs  Day-8-Part-2.hs
