[tool.poetry]
name = "aoc2020"
version = "20.20"
description = "My advent of code solutions"
authors = ["tylerscheuble <5944807+tylerscheuble@users.noreply.github.com>"]
packages = [
  { include = "aoc2020", from="src" }
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.4"
black = "^20.8b1"
isort = "^5.6.4"
mypy = "^0.790"

[tool.isort]
profile = "black"
color_output = true
known_first_party = ["pdl", "pdlapps"]
line_length = 100

[tool.black]
line_length = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
